minimal-start-coldfusion.sh -> start-coldfusion.sh